[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/Niveles/Fondos/StarField.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/UI/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Juego/Niveles/MenuPausa.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0.0470588, 0.768627, 0.0470588, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0.811765, 0.823529, 0.0431373, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 0.94902, 0.0156863, 0.141176, 1 )
font_data = ExtResource( 2 )

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarField" parent="." instance=ExtResource( 1 )]
amount = 17

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -255.5
margin_right = 310.0
margin_bottom = 255.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.5
margin_top = -228.0
margin_right = 290.5
margin_bottom = 228.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonContinuar" type="Button" parent="Panel/VBoxContainer"]
margin_right = 581.0
margin_bottom = 138.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "CONTINUAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonMenuPrincipal" type="Button" parent="Panel/VBoxContainer"]
margin_top = 158.0
margin_right = 581.0
margin_bottom = 297.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "MENU PRINCIPAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonSalir" type="Button" parent="Panel/VBoxContainer"]
margin_top = 317.0
margin_right = 581.0
margin_bottom = 456.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "SALIR"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/VBoxContainer/BotonContinuar" to="." method="_on_BotonContinuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BotonMenuPrincipal" to="." method="_on_BotonMenuPrincipal_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
